--- a/eng.yml
+++ b/eng.yml
@@ -1,2 +1,4 @@
 language-nane: "English"
 language-selected: "You have selected English as your default language"
+
+test-message: "This is a test message"
